# tascar

./: .gitmodules  CMakeLists.txt  Makefile  README.md  README.windows  changelog  check_for_nlohmann  config.mk  release.md  rules.mk  version.cmake
.github/workflows/: macos_make.yml  ubuntu_2204.yml  ubuntu_2404.yml  ubuntu_2604.yml  windows.yml
apps/: Makefile
apps/src/: tascar_mqtt2osc.cc  tascar_osc2csv.cc  tascar_osc2file.cc
cmake/modules/: FindGlibmm.cmake  FindJack.cmake  FindLibXml++.cmake  FindPCRE.cmake  Findliblo.cmake
doc/: doxygen.cfg  tascar.sty
examples/: example_speakerinputports.tsc  icon_v1m.tsc  mididispatch_launchpad.tsc  rotator.tsc  stereo.spk  stereo_uncalib.spk
external_libs/: Makefile
gui/src/: spkcalib.glade  tascar.glade  tascar_mainwindow.cc  tascar_mainwindow.h  tascar_spkcalib.cc
libtascar/: CMakeLists.txt  Makefile
libtascar/include/: acousticmodel.h  alsamidicc.h  audiochunks.h  calibsession.h  coordinates.h  delayline.h  fft.h  hoa.h  jackclient.h  jackiowav.h  jackrender.h  ola.h  osc_helper.h  osc_scene.h  scene.h  session.h  speakerarray.h  spectrum.h  tascar.h  tascarplugin.h  tscconfig.h
libtascar/src/: acousticmodel.cc  alsamidicc.cc  async_file.cc  audiochunks.cc  audiochunks_unit_tests.cc  audioplugin.cc  audiostates.cc  calibsession.cc  coordinates.cc  delayline.cc  fft.cc  fft_unit_tests.cc  filterclass.cc  jackclient.cc  jackiowav.cc  jackrender.cc  levelmeter.cc  osc_helper.cc  osc_scene.cc  receivermod.cc  render.cc  sampler.cc  scene.cc  session.cc  session_reader.cc  sourcemod.cc  speakerarray.cc  spectrum.cc  stft.cc  tscconfig.cc  windows_port.cc  windows_port.h
libtascar/tascar.xcodeproj/: project.pbxproj
libtascar/tascar.xcodeproj/project.xcworkspace/xcuserdata/tobias.xcuserdatad/: UserInterfaceState.xcuserstate
manual/: Makefile  actmodjoystick.tex  actmodrotator.tex  apmodsndfile.tex  apmodspkcalib.tex  documentation.tsc  manual.tex  maskmodmultibeam.tex  maskmodsampledgain.tex  modechoc.tex  modhossustain.tex  modmcuctl.tex  modmididispatch.tex  modroute.tex  oscdoc_receivermod_hoa2d_fuma.tex  oscdoc_receivermod_hoa2d_fuma_hos.tex  oscdoc_session_t.tex  oscdoc_tascar_ap_delay.tex  oscdoc_tascar_ap_sndfile.tex  oscdoc_tascar_ap_spkcalib.tex  oscdoc_tascar_mask_multibeam.tex  oscdoc_tascar_mask_sampledgain.tex  oscdoc_tascarmod_echoc.tex  oscdoc_tascarmod_hossustain.tex  oscdoc_tascarmod_mididispatch.tex  oscdoc_tascarmod_rotator.tex  recgenhoa2d_fuma_hos.tex  tascar.bib
manual/examples/: example_mcuctl.tsc
manual/modtabtex/: tabdelay.tex  tabechoc.tex  tabfixture.tex  tabjoystick.tex  tabmaskpluginsampledgain.tex  tabmcuctl.tex  tabmididispatch.tex  tabosc2lsl.tex  tabreceiver.tex  tabreceiverhoa2d_fuma_hos.tex  tabreverb.tex  tabrotator.tex  tabroute.tex  tabroutes.tex  tabsession.tex  tabsound.tex  tabspeaker.tex  tabtimedisplay.tex  tabtuner.tex
packaging/deb/: Makefile  htchdebian-mkdeb  libtascar.dep  tascarcli.csv  tascarpro.desktop
packaging/homebrew/: Makefile  tascar_homebrew_postinstall
packaging/homebrew/tascar.app/Contents/: Info.plist
packaging/homebrew/tascar.app/Contents/MacOS/: wrapper-script
packaging/homebrew/tascar.app/Contents/Resources/: tascarlogo.icns
plugins/: Makefile
plugins/src/: receivermod_hoa2d_fuma_hos.cc  tascar_ap_delay.cc  tascar_ap_sawtooth.cc  tascar_ap_sndfile.cc  tascar_ap_spkcalib.cc  tascar_mask_multibeam.cc  tascar_mask_sampledgain.cc  tascarmod_echoc.cc  tascarmod_hossustain.cc  tascarmod_hrirconv.cc  tascarmod_ltcgen.cc  tascarmod_matrix.cc  tascarmod_mcuctl.cc  tascarmod_midictl.cc  tascarmod_mididispatch.cc  tascarmod_rotator.cc  tascarmod_route.cc  tascarmod_sampler.cc  tascarmod_touchosc.cc
scripts/: minphase.m  tascar_assertrt  tascar_bandlevels.m  tascar_get_spkgains_from_file.m  tascar_get_spkgains_from_file.py  tascar_ir_measure.m  tascar_xml_add_comment.m  tascar_xml_doc_new.m  tascar_xml_edit_elements.m  tascar_xml_get_element.m  tascar_xml_open.m  tascar_xml_rm_element.m  tascar_xml_save.m
test/: 2ch_spkcorr_freq_fir.spk  Makefile  test_ir_spkcorr_freq_fir.tsc
